--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-  <canvas id="canvas" width="1200" height="600" />
+  <canvas id="canvas" width="1200" height="600"></canvas>
+  <button id="grabDotsBtn">GrabDots</button>
+  <button id="triangulate">Triangulate</button>
 </body>
 
 </html>
