traing to calc a side

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <canvas id="canvas" width="1200" height="600"></canvas>
   <button id="grabDotsBtn">GrabDots</button>
   <button id="triangulate">Triangulate</button>
+  <button id="start">start</button>
 </body>
 
 </html>
